fixing img overlap

--- a/experiences.css
+++ b/experiences.css
@@ -135,6 +135,16 @@ ul.experience-explanation-list li::before {
   justify-content: space-between;
 }
 
+.dual-stack {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
+}
+
+.dual-stack-item {
+  width: 100%;
+}
+
 .stack-item {
   width: 49%;
 }
@@ -148,7 +158,7 @@ ul.experience-explanation-list li::before {
   flex-direction: column;
   justify-content: space-between;
   border: 1px solid #adadad;
-  padding: 5px;
+  padding: 0 5px;
 }
 
 .stack-img-container {
@@ -257,6 +267,11 @@ ul.experience-explanation-list li::before {
     width: 100%;
     margin-bottom: 15px;
   }
+
+  .dual-stack-item {
+    margin-bottom: 15px;
+  }
+
   .stack-containers {
     flex-wrap: wrap;
   }
